adicionando todas as classes e alterações utilizadas na contrução da interface